[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "sortedl1"
version = "1.3.1"
description = "Sorted L-One Penalized Estimation"
readme = "README.md"
maintainers = [{ name = "Johan Larsson", email = "johanlarsson@outlook.com" }]
authors = [
  { name = "Johan Larsson", email = "johanlarsson@outlook.com" },
  { name = "Mathurin Massias", email = "mathurin.massias@gmail.com" },
  { name = "Quentin Klopfenstein" },
  { name = "Jonas Wallin", email = "jonas.wallin@stat.lu.se" },
  { name = "Malgorzata Bogdan" },
  { name = "Ewout van den Berg" },
  { name = "Chiarai Sabatti" },
  { name = "Emmanuel Candes" },
  { name = "Evan Patterson" },
  { name = "Weijie Su" },
]
license = { file = "LICENSE" }
keywords = ["statistics", "machine-learning"]
requires-python = ">=3.9"
dependencies = ["numpy>=1.20", "scikit-learn>=1.0", "scipy>=0.18.0"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

[project.urls]
homepage = "https://github.com/jolars/sortedl1"
documentation = "https://jolars.github.io/sortedl1/"
changelog = "https://github.com/jolars/sortedl1/blob/main/CHANGELOG.md"
tracker = "https://github.com/jolars/sortedl1/issues"

[project.optional-dependencies]
docs = ["sphinx", "furo", "sphinx-copybutton", "myst-parser"]
tests = ["pytest", "sphinx"]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
minimum-version = "build-system.requires"
wheel.expand-macos-universal-tags = true
wheel.license-files = ["LICENSE"]
sdist.exclude = [".github"]

[tool.scikit-build.cmake.define]
CMAKE_CXX_STANDARD = "17"
CMAKE_CXX_STANDARD_REQUIRED = "ON"

[tool.ruff.lint]
extend-select = [
  "B",      # flake8-bugbear
  "I",      # isort
  "ARG",    # flake8-unused-arguments
  "C4",     # flake8-comprehensions
  "EM",     # flake8-errmsg
  "ICN",    # flake8-import-conventions
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "RET",    # flake8-return
  "RUF",    # Ruff-specific
  "SIM",    # flake8-simplify
  "TID251", # flake8-tidy-imports.banned-api
  "T20",    # flake8-print
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
]
ignore = [
  "PLR",    # Design related pylint codes
  "RUF012", # Would require a lot of ClassVar's
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
