[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "sortedl1"
version = "1.7.0"
description = "Sorted L-One Penalized Estimation"
readme = "README.md"
maintainers = [{ name = "Johan Larsson", email = "johanlarsson@outlook.com" }]
authors = [
  { name = "Johan Larsson", email = "johanlarsson@outlook.com" },
  { name = "Mathurin Massias", email = "mathurin.massias@gmail.com" },
  { name = "Quentin Klopfenstein" },
  { name = "Jonas Wallin", email = "jonas.wallin@stat.lu.se" },
  { name = "Malgorzata Bogdan" },
]
license = { file = "LICENSE" }
keywords = ["statistics", "machine-learning"]
requires-python = ">=3.10"
dependencies = ["numpy>=1.20", "scikit-learn>=1.0", "scipy>=0.18.0"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
]

[project.urls]
homepage = "https://github.com/jolars/sortedl1"
documentation = "https://jolars.github.io/sortedl1/"
changelog = "https://github.com/jolars/sortedl1/blob/main/CHANGELOG.md"
tracker = "https://github.com/jolars/sortedl1/issues"

[project.optional-dependencies]
plots = ["matplotlib>=3.5.0"]

[dependency-groups]
docs = [
  "sphinx",
  "furo",
  "sphinx-copybutton",
  "myst-parser",
  "myst-nb",
  "matplotlib>=3.5.0",
]
plots = ["matplotlib>=3.5.0"]
tests = [{ include-group = "plots" }, "pytest", "sphinx"]
dev = [
  { include-group = "tests" },
  { include-group = "docs" },
  { include-group = "plots" },
  "ruff",
  "numpy>=1.20",
  "basedpyright>=1.0.0",
  "typing-extensions>=4.0.0",
]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
minimum-version = "build-system.requires"
wheel.expand-macos-universal-tags = true
sdist.exclude = [".github", ".pre-commit-config.yaml"]

[tool.scikit-build.cmake.define]
CMAKE_CXX_STANDARD = "17"
CMAKE_CXX_STANDARD_REQUIRED = "ON"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_level = "INFO"
filterwarnings = ["error", "ignore::pytest.PytestCacheWarning"]
testpaths = ["tests"]

[tool.cibuildwheel]
build-frontend = "build[uv]"
enable = ["pypy"]
test-command = "python -m pytest tests"
test-sources = ["pyproject.toml", "tests"]
test-groups = ["tests"]

[tool.cibuildwheel.pyodide]
build-frontend = { name = "build", args = ["--exports", "whole_archive"] }

[tool.cibuildwheel.ios]
build-frontend = "build"
xbuild-tools = ["cmake", "ninja"]

[tool.cibuildwheel.android]
build-frontend = "build"
environment.ANDROID_API_LEVEL = "24"

[tool.ruff.lint]
extend-select = [
  "B",      # flake8-bugbear
  "I",      # isort
  "ARG",    # flake8-unused-arguments
  "C4",     # flake8-comprehensions
  "EM",     # flake8-errmsg
  "ICN",    # flake8-import-conventions
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "RET",    # flake8-return
  "RUF",    # Ruff-specific
  "SIM",    # flake8-simplify
  "TID251", # flake8-tidy-imports.banned-api
  "T20",    # flake8-print
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
]
ignore = [
  "PLR",     # Design related pylint codes
  "RUF012",  # Would require a lot of ClassVar's
  "PLC0415", # Lazy imports for optional dependencies (matplotlib)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.9"
pythonPlatform = "All"
include = ["qualpal", "tests"]
exclude = ["build", "dist", ".venv", "**/__pycache__"]
reportMissingTypeStubs = false
