[metadata]
name = sortedl1
version = attr: sortedl1.__version__
maintainer = Johan Larsson
maintainer_email = johanlarsson@outlook.com
author = Johan Larsson, Mathurin Massias, Quentin Klopfenstein, Jonas Wallin
author_email = johanlarsson@outlook.com
description = Sorted L-One Penalized Estimation (SLOPE)
long_description = file: README.md, CHANGELOG.md
url = https://jolars.github.io/sortedl1/
project_urls = 
    Source = https://github.com/jolars/sortedl1
    Documentation = https://jolars.github.io/sortedl1/
license_files = LICENSE

[options]
packages = sortedl1
zip_safe = False
python_requires = >=3.7
install_requires =
    numpy
    scipy
    scikit-learn

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme

[options.entry_points]
console_scripts =
    script_name = package.module:function_name
